feat: add footer component

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,4 +2,6 @@
   "[astro]": {
     "editor.defaultFormatter": "astro-build.astro-vscode"
   },
+  "typescript.preferences.importModuleSpecifier": "non-relative",
+  "javascript.preferences.importModuleSpecifier": "non-relative"
 }
