feat: preact integration added

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,8 @@
       "@styles/*": ["src/styles/*"],
       "@scripts/*": ["src/scripts/*"],
       "@layouts/*": ["src/layouts/*"]
-    }
+    },
+    "jsx": "react-jsx",
+    "jsxImportSource": "preact"
   }
 }
